; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_ReplyWithStringBuffer.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_ReplyWithStringBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RM_ReplyWithStringBuffer(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32* @moduleGetReplyClient(i32* %9)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %14, i32* %4, align 4
  br label %21

15:                                               ; preds = %3
  %16 = load i32*, i32** %8, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @addReplyBulkCBuffer(i32* %16, i8* %17, i64 %18)
  %20 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %15, %13
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32* @moduleGetReplyClient(i32*) #1

declare dso_local i32 @addReplyBulkCBuffer(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
